parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID SEMICOLON np_programa_start vars_opc funcs_opc INICIO np_programa_label cuerpo FIN
Rule 2     np_programa_start -> empty
Rule 3     np_programa_label -> empty
Rule 4     vars_opc -> vars
Rule 5     vars_opc -> empty
Rule 6     funcs_opc -> funcs
Rule 7     funcs_opc -> empty
Rule 8     cuerpo -> LBRACE estatutos_opc RBRACE
Rule 9     estatutos_opc -> estatuto estatutos_opc
Rule 10    estatutos_opc -> empty
Rule 11    vars -> VARS vars_group
Rule 12    vars -> VARS vars_decl
Rule 13    vars_group -> ID vars_coma COLON tipo SEMICOLON vars_final
Rule 14    vars_coma -> empty
Rule 15    vars_coma -> COMMA ID vars_coma
Rule 16    vars_final -> empty
Rule 17    vars_final -> vars_group
Rule 18    vars_decl -> ID COLON tipo SEMICOLON vars_decl_cont
Rule 19    vars_decl_cont -> vars_decl
Rule 20    vars_decl_cont -> empty
Rule 21    tipo -> ENTERO
Rule 22    tipo -> FLOTANTE
Rule 23    funcs -> func_decl funcs
Rule 24    funcs -> func_decl
Rule 25    func_decl -> tipo_func ID np_func_save_data np_func_inicio LPAREN params RPAREN vars_opc cuerpo np_func_fin SEMICOLON
Rule 26    np_func_save_data -> empty
Rule 27    np_func_inicio -> empty
Rule 28    np_func_fin -> empty
Rule 29    tipo_func -> tipo
Rule 30    tipo_func -> NULA
Rule 31    params -> ID COLON tipo params_cont
Rule 32    params -> empty
Rule 33    params_cont -> COMMA params
Rule 34    params_cont -> empty
Rule 35    estatuto -> asignacion
Rule 36    estatuto -> condicion
Rule 37    estatuto -> ciclo
Rule 38    estatuto -> llamada SEMICOLON
Rule 39    estatuto -> imprime
Rule 40    estatuto -> LBRACKET estatutos_opc RBRACKET
Rule 41    estatuto -> retorno
Rule 42    asignacion -> ID ASSIGN expresion SEMICOLON
Rule 43    asignacion -> ID PLUS_ASSIGN expresion SEMICOLON
Rule 44    asignacion -> ID MINUS_ASSIGN expresion SEMICOLON
Rule 45    asignacion -> ID TIMES_ASSIGN expresion SEMICOLON
Rule 46    asignacion -> ID DIVIDE_ASSIGN expresion SEMICOLON
Rule 47    condicion -> SI LPAREN expresion RPAREN np_if_1 cuerpo np_if_2 sino_opc np_if_3 SEMICOLON
Rule 48    sino_opc -> SINO cuerpo
Rule 49    sino_opc -> SINO_SI LPAREN expresion RPAREN np_if_1 cuerpo np_if_2 sino_opc np_if_3
Rule 50    sino_opc -> empty
Rule 51    np_if_1 -> empty
Rule 52    np_if_2 -> empty
Rule 53    np_if_3 -> empty
Rule 54    ciclo -> MIENTRAS np_while_1 LPAREN expresion RPAREN np_while_2 HAZ cuerpo np_while_3 SEMICOLON
Rule 55    np_while_1 -> empty
Rule 56    np_while_2 -> empty
Rule 57    np_while_3 -> empty
Rule 58    imprime -> ESCRIBE LPAREN imprime_args RPAREN SEMICOLON
Rule 59    imprime_args -> expresion np_gen_print_quad imprime_args_cont
Rule 60    imprime_args -> LETRERO np_gen_print_quad_letrero imprime_args_cont
Rule 61    imprime_args_cont -> COMMA imprime_args
Rule 62    imprime_args_cont -> empty
Rule 63    np_gen_print_quad -> empty
Rule 64    np_gen_print_quad_letrero -> empty
Rule 65    expresion -> exp comp_opc
Rule 66    comp_opc -> GT exp
Rule 67    comp_opc -> LT exp
Rule 68    comp_opc -> NE exp
Rule 69    comp_opc -> EQ exp
Rule 70    comp_opc -> LE exp
Rule 71    comp_opc -> GE exp
Rule 72    comp_opc -> empty
Rule 73    exp -> termino op_exp
Rule 74    op_exp -> PLUS np_push_oper termino np_gen_sum_sub op_exp
Rule 75    op_exp -> MINUS np_push_oper termino np_gen_sum_sub op_exp
Rule 76    op_exp -> empty
Rule 77    np_gen_sum_sub -> empty
Rule 78    np_push_oper -> empty
Rule 79    termino -> factor op_termino
Rule 80    op_termino -> TIMES np_push_oper termino np_gen_mult_div
Rule 81    op_termino -> DIVIDE np_push_oper termino np_gen_mult_div
Rule 82    op_termino -> MOD np_push_oper termino np_gen_mult_div
Rule 83    op_termino -> empty
Rule 84    np_gen_mult_div -> empty
Rule 85    factor -> np_push_fondo_falso LPAREN expresion RPAREN np_pop_fondo_falso
Rule 86    factor -> sign_opc factor_val np_apply_unary
Rule 87    factor -> MINUS factor_val np_unary_neg
Rule 88    factor -> PLUS factor_val np_unary_pos
Rule 89    np_push_fondo_falso -> empty
Rule 90    np_pop_fondo_falso -> empty
Rule 91    sign_opc -> PLUS
Rule 92    sign_opc -> MINUS
Rule 93    sign_opc -> empty
Rule 94    np_apply_unary -> empty
Rule 95    np_unary_neg -> empty
Rule 96    np_unary_pos -> empty
Rule 97    factor_val -> ID
Rule 98    factor_val -> CTE_ENT
Rule 99    factor_val -> CTE_FLOT
Rule 100   factor_val -> llamada
Rule 101   llamada -> ID np_llamada_inicio LPAREN llamada_args RPAREN np_llamada_fin
Rule 102   np_llamada_inicio -> empty
Rule 103   np_llamada_fin -> empty
Rule 104   llamada_args -> expresion np_agregar_arg llamada_args_cont
Rule 105   llamada_args -> empty
Rule 106   np_agregar_arg -> empty
Rule 107   llamada_args_cont -> COMMA llamada_args
Rule 108   llamada_args_cont -> empty
Rule 109   retorno -> RETURN expresion SEMICOLON
Rule 110   empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 42
COLON                : 13 18 31
COMMA                : 15 33 61 107
CTE_ENT              : 98
CTE_FLOT             : 99
DIVIDE               : 81
DIVIDE_ASSIGN        : 46
ENTERO               : 21
EQ                   : 69
ESCRIBE              : 58
FIN                  : 1
FLOTANTE             : 22
GE                   : 71
GT                   : 66
HAZ                  : 54
ID                   : 1 13 15 18 25 31 42 43 44 45 46 97 101
INICIO               : 1
LBRACE               : 8
LBRACKET             : 40
LE                   : 70
LETRERO              : 60
LPAREN               : 25 47 49 54 58 85 101
LT                   : 67
MIENTRAS             : 54
MINUS                : 75 87 92
MINUS_ASSIGN         : 44
MOD                  : 82
NE                   : 68
NULA                 : 30
PLUS                 : 74 88 91
PLUS_ASSIGN          : 43
PROGRAMA             : 1
RBRACE               : 8
RBRACKET             : 40
RETURN               : 109
RPAREN               : 25 47 49 54 58 85 101
SEMICOLON            : 1 13 18 25 38 42 43 44 45 46 47 54 58 109
SI                   : 47
SINO                 : 48
SINO_SI              : 49
TIMES                : 80
TIMES_ASSIGN         : 45
VARS                 : 11 12
error                : 

Nonterminals, with rules where they appear

asignacion           : 35
ciclo                : 37
comp_opc             : 65
condicion            : 36
cuerpo               : 1 25 47 48 49 54
empty                : 2 3 5 7 10 14 16 20 26 27 28 32 34 50 51 52 53 55 56 57 62 63 64 72 76 77 78 83 84 89 90 93 94 95 96 102 103 105 106 108
estatuto             : 9
estatutos_opc        : 8 9 40
exp                  : 65 66 67 68 69 70 71
expresion            : 42 43 44 45 46 47 49 54 59 85 104 109
factor               : 79
factor_val           : 86 87 88
func_decl            : 23 24
funcs                : 6 23
funcs_opc            : 1
imprime              : 39
imprime_args         : 58 61
imprime_args_cont    : 59 60
llamada              : 38 100
llamada_args         : 101 107
llamada_args_cont    : 104
np_agregar_arg       : 104
np_apply_unary       : 86
np_func_fin          : 25
np_func_inicio       : 25
np_func_save_data    : 25
np_gen_mult_div      : 80 81 82
np_gen_print_quad    : 59
np_gen_print_quad_letrero : 60
np_gen_sum_sub       : 74 75
np_if_1              : 47 49
np_if_2              : 47 49
np_if_3              : 47 49
np_llamada_fin       : 101
np_llamada_inicio    : 101
np_pop_fondo_falso   : 85
np_programa_label    : 1
np_programa_start    : 1
np_push_fondo_falso  : 85
np_push_oper         : 74 75 80 81 82
np_unary_neg         : 87
np_unary_pos         : 88
np_while_1           : 54
np_while_2           : 54
np_while_3           : 54
op_exp               : 73 74 75
op_termino           : 79
params               : 25 33
params_cont          : 31
programa             : 0
retorno              : 41
sign_opc             : 86
sino_opc             : 47 49
termino              : 73 74 75 80 81 82
tipo                 : 13 18 29 31
tipo_func            : 25
vars                 : 4
vars_coma            : 13 15
vars_decl            : 12 19
vars_decl_cont       : 18
vars_final           : 13
vars_group           : 11 17
vars_opc             : 1 25

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID SEMICOLON np_programa_start vars_opc funcs_opc INICIO np_programa_label cuerpo FIN

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID SEMICOLON np_programa_start vars_opc funcs_opc INICIO np_programa_label cuerpo FIN

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . SEMICOLON np_programa_start vars_opc funcs_opc INICIO np_programa_label cuerpo FIN

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID SEMICOLON . np_programa_start vars_opc funcs_opc INICIO np_programa_label cuerpo FIN
    (2) np_programa_start -> . empty
    (110) empty -> .

    VARS            reduce using rule 110 (empty -> .)
    NULA            reduce using rule 110 (empty -> .)
    ENTERO          reduce using rule 110 (empty -> .)
    FLOTANTE        reduce using rule 110 (empty -> .)
    INICIO          reduce using rule 110 (empty -> .)

    np_programa_start              shift and go to state 5
    empty                          shift and go to state 6

state 5

    (1) programa -> PROGRAMA ID SEMICOLON np_programa_start . vars_opc funcs_opc INICIO np_programa_label cuerpo FIN
    (4) vars_opc -> . vars
    (5) vars_opc -> . empty
    (11) vars -> . VARS vars_group
    (12) vars -> . VARS vars_decl
    (110) empty -> .

    VARS            shift and go to state 10
    NULA            reduce using rule 110 (empty -> .)
    ENTERO          reduce using rule 110 (empty -> .)
    FLOTANTE        reduce using rule 110 (empty -> .)
    INICIO          reduce using rule 110 (empty -> .)

    vars_opc                       shift and go to state 7
    vars                           shift and go to state 8
    empty                          shift and go to state 9

state 6

    (2) np_programa_start -> empty .

    VARS            reduce using rule 2 (np_programa_start -> empty .)
    NULA            reduce using rule 2 (np_programa_start -> empty .)
    ENTERO          reduce using rule 2 (np_programa_start -> empty .)
    FLOTANTE        reduce using rule 2 (np_programa_start -> empty .)
    INICIO          reduce using rule 2 (np_programa_start -> empty .)


state 7

    (1) programa -> PROGRAMA ID SEMICOLON np_programa_start vars_opc . funcs_opc INICIO np_programa_label cuerpo FIN
    (6) funcs_opc -> . funcs
    (7) funcs_opc -> . empty
    (23) funcs -> . func_decl funcs
    (24) funcs -> . func_decl
    (110) empty -> .
    (25) func_decl -> . tipo_func ID np_func_save_data np_func_inicio LPAREN params RPAREN vars_opc cuerpo np_func_fin SEMICOLON
    (29) tipo_func -> . tipo
    (30) tipo_func -> . NULA
    (21) tipo -> . ENTERO
    (22) tipo -> . FLOTANTE

    INICIO          reduce using rule 110 (empty -> .)
    NULA            shift and go to state 17
    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19

    funcs_opc                      shift and go to state 11
    funcs                          shift and go to state 12
    empty                          shift and go to state 13
    func_decl                      shift and go to state 14
    tipo_func                      shift and go to state 15
    tipo                           shift and go to state 16

state 8

    (4) vars_opc -> vars .

    NULA            reduce using rule 4 (vars_opc -> vars .)
    ENTERO          reduce using rule 4 (vars_opc -> vars .)
    FLOTANTE        reduce using rule 4 (vars_opc -> vars .)
    INICIO          reduce using rule 4 (vars_opc -> vars .)
    LBRACE          reduce using rule 4 (vars_opc -> vars .)


state 9

    (5) vars_opc -> empty .

    NULA            reduce using rule 5 (vars_opc -> empty .)
    ENTERO          reduce using rule 5 (vars_opc -> empty .)
    FLOTANTE        reduce using rule 5 (vars_opc -> empty .)
    INICIO          reduce using rule 5 (vars_opc -> empty .)
    LBRACE          reduce using rule 5 (vars_opc -> empty .)


state 10

    (11) vars -> VARS . vars_group
    (12) vars -> VARS . vars_decl
    (13) vars_group -> . ID vars_coma COLON tipo SEMICOLON vars_final
    (18) vars_decl -> . ID COLON tipo SEMICOLON vars_decl_cont

    ID              shift and go to state 22

    vars_group                     shift and go to state 20
    vars_decl                      shift and go to state 21

state 11

    (1) programa -> PROGRAMA ID SEMICOLON np_programa_start vars_opc funcs_opc . INICIO np_programa_label cuerpo FIN

    INICIO          shift and go to state 23


state 12

    (6) funcs_opc -> funcs .

    INICIO          reduce using rule 6 (funcs_opc -> funcs .)


state 13

    (7) funcs_opc -> empty .

    INICIO          reduce using rule 7 (funcs_opc -> empty .)


state 14

    (23) funcs -> func_decl . funcs
    (24) funcs -> func_decl .
    (23) funcs -> . func_decl funcs
    (24) funcs -> . func_decl
    (25) func_decl -> . tipo_func ID np_func_save_data np_func_inicio LPAREN params RPAREN vars_opc cuerpo np_func_fin SEMICOLON
    (29) tipo_func -> . tipo
    (30) tipo_func -> . NULA
    (21) tipo -> . ENTERO
    (22) tipo -> . FLOTANTE

    INICIO          reduce using rule 24 (funcs -> func_decl .)
    NULA            shift and go to state 17
    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19

    func_decl                      shift and go to state 14
    funcs                          shift and go to state 24
    tipo_func                      shift and go to state 15
    tipo                           shift and go to state 16

state 15

    (25) func_decl -> tipo_func . ID np_func_save_data np_func_inicio LPAREN params RPAREN vars_opc cuerpo np_func_fin SEMICOLON

    ID              shift and go to state 25


state 16

    (29) tipo_func -> tipo .

    ID              reduce using rule 29 (tipo_func -> tipo .)


state 17

    (30) tipo_func -> NULA .

    ID              reduce using rule 30 (tipo_func -> NULA .)


state 18

    (21) tipo -> ENTERO .

    ID              reduce using rule 21 (tipo -> ENTERO .)
    SEMICOLON       reduce using rule 21 (tipo -> ENTERO .)
    COMMA           reduce using rule 21 (tipo -> ENTERO .)
    RPAREN          reduce using rule 21 (tipo -> ENTERO .)


state 19

    (22) tipo -> FLOTANTE .

    ID              reduce using rule 22 (tipo -> FLOTANTE .)
    SEMICOLON       reduce using rule 22 (tipo -> FLOTANTE .)
    COMMA           reduce using rule 22 (tipo -> FLOTANTE .)
    RPAREN          reduce using rule 22 (tipo -> FLOTANTE .)


state 20

    (11) vars -> VARS vars_group .

    NULA            reduce using rule 11 (vars -> VARS vars_group .)
    ENTERO          reduce using rule 11 (vars -> VARS vars_group .)
    FLOTANTE        reduce using rule 11 (vars -> VARS vars_group .)
    INICIO          reduce using rule 11 (vars -> VARS vars_group .)
    LBRACE          reduce using rule 11 (vars -> VARS vars_group .)


state 21

    (12) vars -> VARS vars_decl .

    NULA            reduce using rule 12 (vars -> VARS vars_decl .)
    ENTERO          reduce using rule 12 (vars -> VARS vars_decl .)
    FLOTANTE        reduce using rule 12 (vars -> VARS vars_decl .)
    INICIO          reduce using rule 12 (vars -> VARS vars_decl .)
    LBRACE          reduce using rule 12 (vars -> VARS vars_decl .)


state 22

    (13) vars_group -> ID . vars_coma COLON tipo SEMICOLON vars_final
    (18) vars_decl -> ID . COLON tipo SEMICOLON vars_decl_cont
    (14) vars_coma -> . empty
    (15) vars_coma -> . COMMA ID vars_coma
    (110) empty -> .

  ! shift/reduce conflict for COLON resolved as shift
    COLON           shift and go to state 27
    COMMA           shift and go to state 29

  ! COLON           [ reduce using rule 110 (empty -> .) ]

    vars_coma                      shift and go to state 26
    empty                          shift and go to state 28

state 23

    (1) programa -> PROGRAMA ID SEMICOLON np_programa_start vars_opc funcs_opc INICIO . np_programa_label cuerpo FIN
    (3) np_programa_label -> . empty
    (110) empty -> .

    LBRACE          reduce using rule 110 (empty -> .)

    np_programa_label              shift and go to state 30
    empty                          shift and go to state 31

state 24

    (23) funcs -> func_decl funcs .

    INICIO          reduce using rule 23 (funcs -> func_decl funcs .)


state 25

    (25) func_decl -> tipo_func ID . np_func_save_data np_func_inicio LPAREN params RPAREN vars_opc cuerpo np_func_fin SEMICOLON
    (26) np_func_save_data -> . empty
    (110) empty -> .

    LPAREN          reduce using rule 110 (empty -> .)

    np_func_save_data              shift and go to state 32
    empty                          shift and go to state 33

state 26

    (13) vars_group -> ID vars_coma . COLON tipo SEMICOLON vars_final

    COLON           shift and go to state 34


state 27

    (18) vars_decl -> ID COLON . tipo SEMICOLON vars_decl_cont
    (21) tipo -> . ENTERO
    (22) tipo -> . FLOTANTE

    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19

    tipo                           shift and go to state 35

state 28

    (14) vars_coma -> empty .

    COLON           reduce using rule 14 (vars_coma -> empty .)


state 29

    (15) vars_coma -> COMMA . ID vars_coma

    ID              shift and go to state 36


state 30

    (1) programa -> PROGRAMA ID SEMICOLON np_programa_start vars_opc funcs_opc INICIO np_programa_label . cuerpo FIN
    (8) cuerpo -> . LBRACE estatutos_opc RBRACE

    LBRACE          shift and go to state 38

    cuerpo                         shift and go to state 37

state 31

    (3) np_programa_label -> empty .

    LBRACE          reduce using rule 3 (np_programa_label -> empty .)


state 32

    (25) func_decl -> tipo_func ID np_func_save_data . np_func_inicio LPAREN params RPAREN vars_opc cuerpo np_func_fin SEMICOLON
    (27) np_func_inicio -> . empty
    (110) empty -> .

    LPAREN          reduce using rule 110 (empty -> .)

    np_func_inicio                 shift and go to state 39
    empty                          shift and go to state 40

state 33

    (26) np_func_save_data -> empty .

    LPAREN          reduce using rule 26 (np_func_save_data -> empty .)


state 34

    (13) vars_group -> ID vars_coma COLON . tipo SEMICOLON vars_final
    (21) tipo -> . ENTERO
    (22) tipo -> . FLOTANTE

    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19

    tipo                           shift and go to state 41

state 35

    (18) vars_decl -> ID COLON tipo . SEMICOLON vars_decl_cont

    SEMICOLON       shift and go to state 42


state 36

    (15) vars_coma -> COMMA ID . vars_coma
    (14) vars_coma -> . empty
    (15) vars_coma -> . COMMA ID vars_coma
    (110) empty -> .

    COMMA           shift and go to state 29
    COLON           reduce using rule 110 (empty -> .)

    vars_coma                      shift and go to state 43
    empty                          shift and go to state 28

state 37

    (1) programa -> PROGRAMA ID SEMICOLON np_programa_start vars_opc funcs_opc INICIO np_programa_label cuerpo . FIN

    FIN             shift and go to state 44


state 38

    (8) cuerpo -> LBRACE . estatutos_opc RBRACE
    (9) estatutos_opc -> . estatuto estatutos_opc
    (10) estatutos_opc -> . empty
    (35) estatuto -> . asignacion
    (36) estatuto -> . condicion
    (37) estatuto -> . ciclo
    (38) estatuto -> . llamada SEMICOLON
    (39) estatuto -> . imprime
    (40) estatuto -> . LBRACKET estatutos_opc RBRACKET
    (41) estatuto -> . retorno
    (110) empty -> .
    (42) asignacion -> . ID ASSIGN expresion SEMICOLON
    (43) asignacion -> . ID PLUS_ASSIGN expresion SEMICOLON
    (44) asignacion -> . ID MINUS_ASSIGN expresion SEMICOLON
    (45) asignacion -> . ID TIMES_ASSIGN expresion SEMICOLON
    (46) asignacion -> . ID DIVIDE_ASSIGN expresion SEMICOLON
    (47) condicion -> . SI LPAREN expresion RPAREN np_if_1 cuerpo np_if_2 sino_opc np_if_3 SEMICOLON
    (54) ciclo -> . MIENTRAS np_while_1 LPAREN expresion RPAREN np_while_2 HAZ cuerpo np_while_3 SEMICOLON
    (101) llamada -> . ID np_llamada_inicio LPAREN llamada_args RPAREN np_llamada_fin
    (58) imprime -> . ESCRIBE LPAREN imprime_args RPAREN SEMICOLON
    (109) retorno -> . RETURN expresion SEMICOLON

    LBRACKET        shift and go to state 53
    RBRACE          reduce using rule 110 (empty -> .)
    ID              shift and go to state 55
    SI              shift and go to state 56
    MIENTRAS        shift and go to state 57
    ESCRIBE         shift and go to state 58
    RETURN          shift and go to state 59

    estatutos_opc                  shift and go to state 45
    estatuto                       shift and go to state 46
    empty                          shift and go to state 47
    asignacion                     shift and go to state 48
    condicion                      shift and go to state 49
    ciclo                          shift and go to state 50
    llamada                        shift and go to state 51
    imprime                        shift and go to state 52
    retorno                        shift and go to state 54

state 39

    (25) func_decl -> tipo_func ID np_func_save_data np_func_inicio . LPAREN params RPAREN vars_opc cuerpo np_func_fin SEMICOLON

    LPAREN          shift and go to state 60


state 40

    (27) np_func_inicio -> empty .

    LPAREN          reduce using rule 27 (np_func_inicio -> empty .)


state 41

    (13) vars_group -> ID vars_coma COLON tipo . SEMICOLON vars_final

    SEMICOLON       shift and go to state 61


state 42

    (18) vars_decl -> ID COLON tipo SEMICOLON . vars_decl_cont
    (19) vars_decl_cont -> . vars_decl
    (20) vars_decl_cont -> . empty
    (18) vars_decl -> . ID COLON tipo SEMICOLON vars_decl_cont
    (110) empty -> .

    ID              shift and go to state 62
    NULA            reduce using rule 110 (empty -> .)
    ENTERO          reduce using rule 110 (empty -> .)
    FLOTANTE        reduce using rule 110 (empty -> .)
    INICIO          reduce using rule 110 (empty -> .)
    LBRACE          reduce using rule 110 (empty -> .)

    vars_decl_cont                 shift and go to state 63
    vars_decl                      shift and go to state 64
    empty                          shift and go to state 65

state 43

    (15) vars_coma -> COMMA ID vars_coma .

    COLON           reduce using rule 15 (vars_coma -> COMMA ID vars_coma .)


state 44

    (1) programa -> PROGRAMA ID SEMICOLON np_programa_start vars_opc funcs_opc INICIO np_programa_label cuerpo FIN .

    $end            reduce using rule 1 (programa -> PROGRAMA ID SEMICOLON np_programa_start vars_opc funcs_opc INICIO np_programa_label cuerpo FIN .)


state 45

    (8) cuerpo -> LBRACE estatutos_opc . RBRACE

    RBRACE          shift and go to state 66


state 46

    (9) estatutos_opc -> estatuto . estatutos_opc
    (9) estatutos_opc -> . estatuto estatutos_opc
    (10) estatutos_opc -> . empty
    (35) estatuto -> . asignacion
    (36) estatuto -> . condicion
    (37) estatuto -> . ciclo
    (38) estatuto -> . llamada SEMICOLON
    (39) estatuto -> . imprime
    (40) estatuto -> . LBRACKET estatutos_opc RBRACKET
    (41) estatuto -> . retorno
    (110) empty -> .
    (42) asignacion -> . ID ASSIGN expresion SEMICOLON
    (43) asignacion -> . ID PLUS_ASSIGN expresion SEMICOLON
    (44) asignacion -> . ID MINUS_ASSIGN expresion SEMICOLON
    (45) asignacion -> . ID TIMES_ASSIGN expresion SEMICOLON
    (46) asignacion -> . ID DIVIDE_ASSIGN expresion SEMICOLON
    (47) condicion -> . SI LPAREN expresion RPAREN np_if_1 cuerpo np_if_2 sino_opc np_if_3 SEMICOLON
    (54) ciclo -> . MIENTRAS np_while_1 LPAREN expresion RPAREN np_while_2 HAZ cuerpo np_while_3 SEMICOLON
    (101) llamada -> . ID np_llamada_inicio LPAREN llamada_args RPAREN np_llamada_fin
    (58) imprime -> . ESCRIBE LPAREN imprime_args RPAREN SEMICOLON
    (109) retorno -> . RETURN expresion SEMICOLON

    LBRACKET        shift and go to state 53
    RBRACE          reduce using rule 110 (empty -> .)
    RBRACKET        reduce using rule 110 (empty -> .)
    ID              shift and go to state 55
    SI              shift and go to state 56
    MIENTRAS        shift and go to state 57
    ESCRIBE         shift and go to state 58
    RETURN          shift and go to state 59

    estatuto                       shift and go to state 46
    estatutos_opc                  shift and go to state 67
    empty                          shift and go to state 47
    asignacion                     shift and go to state 48
    condicion                      shift and go to state 49
    ciclo                          shift and go to state 50
    llamada                        shift and go to state 51
    imprime                        shift and go to state 52
    retorno                        shift and go to state 54

state 47

    (10) estatutos_opc -> empty .

    RBRACE          reduce using rule 10 (estatutos_opc -> empty .)
    RBRACKET        reduce using rule 10 (estatutos_opc -> empty .)


state 48

    (35) estatuto -> asignacion .

    LBRACKET        reduce using rule 35 (estatuto -> asignacion .)
    ID              reduce using rule 35 (estatuto -> asignacion .)
    SI              reduce using rule 35 (estatuto -> asignacion .)
    MIENTRAS        reduce using rule 35 (estatuto -> asignacion .)
    ESCRIBE         reduce using rule 35 (estatuto -> asignacion .)
    RETURN          reduce using rule 35 (estatuto -> asignacion .)
    RBRACE          reduce using rule 35 (estatuto -> asignacion .)
    RBRACKET        reduce using rule 35 (estatuto -> asignacion .)


state 49

    (36) estatuto -> condicion .

    LBRACKET        reduce using rule 36 (estatuto -> condicion .)
    ID              reduce using rule 36 (estatuto -> condicion .)
    SI              reduce using rule 36 (estatuto -> condicion .)
    MIENTRAS        reduce using rule 36 (estatuto -> condicion .)
    ESCRIBE         reduce using rule 36 (estatuto -> condicion .)
    RETURN          reduce using rule 36 (estatuto -> condicion .)
    RBRACE          reduce using rule 36 (estatuto -> condicion .)
    RBRACKET        reduce using rule 36 (estatuto -> condicion .)


state 50

    (37) estatuto -> ciclo .

    LBRACKET        reduce using rule 37 (estatuto -> ciclo .)
    ID              reduce using rule 37 (estatuto -> ciclo .)
    SI              reduce using rule 37 (estatuto -> ciclo .)
    MIENTRAS        reduce using rule 37 (estatuto -> ciclo .)
    ESCRIBE         reduce using rule 37 (estatuto -> ciclo .)
    RETURN          reduce using rule 37 (estatuto -> ciclo .)
    RBRACE          reduce using rule 37 (estatuto -> ciclo .)
    RBRACKET        reduce using rule 37 (estatuto -> ciclo .)


state 51

    (38) estatuto -> llamada . SEMICOLON

    SEMICOLON       shift and go to state 68


state 52

    (39) estatuto -> imprime .

    LBRACKET        reduce using rule 39 (estatuto -> imprime .)
    ID              reduce using rule 39 (estatuto -> imprime .)
    SI              reduce using rule 39 (estatuto -> imprime .)
    MIENTRAS        reduce using rule 39 (estatuto -> imprime .)
    ESCRIBE         reduce using rule 39 (estatuto -> imprime .)
    RETURN          reduce using rule 39 (estatuto -> imprime .)
    RBRACE          reduce using rule 39 (estatuto -> imprime .)
    RBRACKET        reduce using rule 39 (estatuto -> imprime .)


state 53

    (40) estatuto -> LBRACKET . estatutos_opc RBRACKET
    (9) estatutos_opc -> . estatuto estatutos_opc
    (10) estatutos_opc -> . empty
    (35) estatuto -> . asignacion
    (36) estatuto -> . condicion
    (37) estatuto -> . ciclo
    (38) estatuto -> . llamada SEMICOLON
    (39) estatuto -> . imprime
    (40) estatuto -> . LBRACKET estatutos_opc RBRACKET
    (41) estatuto -> . retorno
    (110) empty -> .
    (42) asignacion -> . ID ASSIGN expresion SEMICOLON
    (43) asignacion -> . ID PLUS_ASSIGN expresion SEMICOLON
    (44) asignacion -> . ID MINUS_ASSIGN expresion SEMICOLON
    (45) asignacion -> . ID TIMES_ASSIGN expresion SEMICOLON
    (46) asignacion -> . ID DIVIDE_ASSIGN expresion SEMICOLON
    (47) condicion -> . SI LPAREN expresion RPAREN np_if_1 cuerpo np_if_2 sino_opc np_if_3 SEMICOLON
    (54) ciclo -> . MIENTRAS np_while_1 LPAREN expresion RPAREN np_while_2 HAZ cuerpo np_while_3 SEMICOLON
    (101) llamada -> . ID np_llamada_inicio LPAREN llamada_args RPAREN np_llamada_fin
    (58) imprime -> . ESCRIBE LPAREN imprime_args RPAREN SEMICOLON
    (109) retorno -> . RETURN expresion SEMICOLON

    LBRACKET        shift and go to state 53
    RBRACKET        reduce using rule 110 (empty -> .)
    ID              shift and go to state 55
    SI              shift and go to state 56
    MIENTRAS        shift and go to state 57
    ESCRIBE         shift and go to state 58
    RETURN          shift and go to state 59

    estatutos_opc                  shift and go to state 69
    estatuto                       shift and go to state 46
    empty                          shift and go to state 47
    asignacion                     shift and go to state 48
    condicion                      shift and go to state 49
    ciclo                          shift and go to state 50
    llamada                        shift and go to state 51
    imprime                        shift and go to state 52
    retorno                        shift and go to state 54

state 54

    (41) estatuto -> retorno .

    LBRACKET        reduce using rule 41 (estatuto -> retorno .)
    ID              reduce using rule 41 (estatuto -> retorno .)
    SI              reduce using rule 41 (estatuto -> retorno .)
    MIENTRAS        reduce using rule 41 (estatuto -> retorno .)
    ESCRIBE         reduce using rule 41 (estatuto -> retorno .)
    RETURN          reduce using rule 41 (estatuto -> retorno .)
    RBRACE          reduce using rule 41 (estatuto -> retorno .)
    RBRACKET        reduce using rule 41 (estatuto -> retorno .)


state 55

    (42) asignacion -> ID . ASSIGN expresion SEMICOLON
    (43) asignacion -> ID . PLUS_ASSIGN expresion SEMICOLON
    (44) asignacion -> ID . MINUS_ASSIGN expresion SEMICOLON
    (45) asignacion -> ID . TIMES_ASSIGN expresion SEMICOLON
    (46) asignacion -> ID . DIVIDE_ASSIGN expresion SEMICOLON
    (101) llamada -> ID . np_llamada_inicio LPAREN llamada_args RPAREN np_llamada_fin
    (102) np_llamada_inicio -> . empty
    (110) empty -> .

    ASSIGN          shift and go to state 70
    PLUS_ASSIGN     shift and go to state 71
    MINUS_ASSIGN    shift and go to state 72
    TIMES_ASSIGN    shift and go to state 73
    DIVIDE_ASSIGN   shift and go to state 74
    LPAREN          reduce using rule 110 (empty -> .)

    np_llamada_inicio              shift and go to state 75
    empty                          shift and go to state 76

state 56

    (47) condicion -> SI . LPAREN expresion RPAREN np_if_1 cuerpo np_if_2 sino_opc np_if_3 SEMICOLON

    LPAREN          shift and go to state 77


state 57

    (54) ciclo -> MIENTRAS . np_while_1 LPAREN expresion RPAREN np_while_2 HAZ cuerpo np_while_3 SEMICOLON
    (55) np_while_1 -> . empty
    (110) empty -> .

    LPAREN          reduce using rule 110 (empty -> .)

    np_while_1                     shift and go to state 78
    empty                          shift and go to state 79

state 58

    (58) imprime -> ESCRIBE . LPAREN imprime_args RPAREN SEMICOLON

    LPAREN          shift and go to state 80


state 59

    (109) retorno -> RETURN . expresion SEMICOLON
    (65) expresion -> . exp comp_opc
    (73) exp -> . termino op_exp
    (79) termino -> . factor op_termino
    (85) factor -> . np_push_fondo_falso LPAREN expresion RPAREN np_pop_fondo_falso
    (86) factor -> . sign_opc factor_val np_apply_unary
    (87) factor -> . MINUS factor_val np_unary_neg
    (88) factor -> . PLUS factor_val np_unary_pos
    (89) np_push_fondo_falso -> . empty
    (91) sign_opc -> . PLUS
    (92) sign_opc -> . MINUS
    (93) sign_opc -> . empty
    (110) empty -> .

    MINUS           shift and go to state 87
    PLUS            shift and go to state 88
    LPAREN          reduce using rule 110 (empty -> .)
    ID              reduce using rule 110 (empty -> .)
    CTE_ENT         reduce using rule 110 (empty -> .)
    CTE_FLOT        reduce using rule 110 (empty -> .)
